--- a/calendar.html
+++ b/calendar.html
@@ -245,16 +245,16 @@
         <div class="containerlogo"> 
             <img src="logo.png" alt="Logo" class="logo"> 
         </div> 
-        <a href="painel.php" class="home">
+        <a href="painel.html" class="home">
             <i class="fa-solid fa-coins icon"></i> <span class="text">DRE</span>
         </a>
-        <a href="reports.php">
+        <a href="reports.html">
             <i class="fa-solid fa-solar-panel icon"></i><span class="text">Usinas</span>
         </a>
-        <a href="calendar.php">
+        <a href="calendar.html">
             <i class="fa-solid fa-gauge icon"></i> <span class="text">Dashboard</span>
         </a>
-        <a href="help.php">
+        <a href="help.html">
             <i class="fa-solid fa-paste icon"></i><span class="text">Documentos</span>
         </a>
     </div>
