--- a/create.html
+++ b/create.html
@@ -1,5 +1,5 @@
-<?php
-include_once 'conexaocarros.php'; // Inclui a conexão corretamente
+<?html
+include_once 'conexaocarros.html'; // Inclui a conexão corretamente
 
 // Verifica se a conexão está estabelecida
 if (!$conn) {
