--- a/protect.html
+++ b/protect.html
@@ -1,11 +1,11 @@
-<?php
+<?html
 
 if(!isset($_SESSION)) {
     session_start();
 }
 
 if(!isset($_SESSION['id'])) {
-    die("Você não pode acessar esta página porque não está logado.<p><a href=\"index.php\">Entrar</a></p>");
+    die("Você não pode acessar esta página porque não está logado.<p><a href=\"index.html\">Entrar</a></p>");
 }
 
 
