--- a/update.html
+++ b/update.html
@@ -1,5 +1,5 @@
-<?php
-include 'conexao.php';
+<?html
+include 'conexao.html';
 
 if ($_SERVER['REQUEST_METHOD'] == 'POST') {
     $id = $_POST['id'];
