--- a/home.html
+++ b/home.html
@@ -118,16 +118,16 @@
     <div class="sidebar" id="sidebar">
         <div class="toggle-btn" onclick="toggleSidebar()">☰</div>
         <img src="logo.png" alt="Logo" class="logo">
-        <a href="painel.php">
+        <a href="painel.html">
             🏠 <span class="text">Início</span>
         </a>
-        <a href="reports.php">
+        <a href="reports.html">
             📊 <span class="text">Relatórios</span>
         </a>
-        <a href="calendar.php">
+        <a href="calendar.html">
             📅 <span class="text">Calendário</span>
         </a>
-        <a href="help.php">
+        <a href="help.html">
             ❓ <span class="text">Ajuda</span>
         </a>
     </div>
