--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                 <div id="cards-container">
                     <div class="card" onclick="toggleDetails(this)">
                         <div class="card-header">
-                            NOV/24 Canal Verde
+                            <b>NOV/24</b>&nbsp;Canal Verde
                             <div class="status">
                                 <div class="status-indicator registered"></div>
                                 Registrado
@@ -595,7 +595,7 @@
                     </div>
                     <div class="card" onclick="toggleDetails(this)">
                         <div class="card-header">
-                            OUT/24 Canal Verde
+                            <b>OUT/24</b>&nbsp;Canal Verde
                             <div class="status">
                                 <div class="status-indicator registered"></div>
                                 Registrado
@@ -609,7 +609,7 @@
                     </div>
                     <div class="card" onclick="toggleDetails(this)">
                         <div class="card-header">
-                            SET/24 Canal Verde
+                            <b>SET/24</b>&nbsp;Canal Verde
                             <div class="status">
                                 <div class="status-indicator liquidated"></div>
                                 Liquidado
@@ -623,7 +623,7 @@
                     </div>
                     <div class="card" onclick="toggleDetails(this)">
                         <div class="card-header">
-                            AGO/24 Canal Verde
+                            <b>AGO/24</b>&nbsp;Canal Verde
                             <div class="status">
                                 <div class="status-indicator liquidated"></div>
                                 Liquidado
@@ -806,7 +806,7 @@
         newCard.innerHTML = `
             <div class="card" onclick="toggleDetails(this)">
                 <div class="card-header">
-                    JUL/24 Canal Verde
+                    <b>JUL/24</b>&nbsp;Canal Verde
                     <div class="status">
                         <div class="status-indicator liquidated"></div>
                         Liquidado
