--- a/calendar.html
+++ b/calendar.html
@@ -214,7 +214,7 @@
         }
 
         .check-icon {
-            color: blue;
+            color: #018538;
             margin-right: 10px;
             margin-top: 5px;
             flex-shrink: 0;
@@ -239,7 +239,7 @@
         }   
         .numero {
             font-weight: bold;
-            color: blue;
+            color: #018538;
             margin-right: 10px;
         }
 
@@ -341,7 +341,7 @@
         }
         .icon {
             font-size: 24px;
-            color: blue;
+            color: #018538;
             margin-right: 10px;
         }
 
@@ -353,7 +353,7 @@
 
         .valor {
             font-size: 1.5em;
-            color: blue;
+            color: #018538;
             font-weight: bold;
         }
 
@@ -507,7 +507,7 @@
             margin-right: 8px;
         }
         .discount {
-            background-color: blue;
+            background-color: #018538;
             color: white;
             padding: 4px 8px;
             border-radius: 4px;
@@ -518,7 +518,7 @@
             color: red;
         }
         .preco {
-            color: blue;
+            color: #018538;
             font-size: 24px; /* Ajuste o tamanho conforme necessário */
         }
         .box-container {
@@ -548,9 +548,7 @@
             height: 4px;
             border-radius: 2px;
         }
-        .blue-underline {
-            background-color: blue;
-        }
+
         .orange-underline {
             background-color: orange;
         }
@@ -708,22 +706,22 @@
             <span class="card2">R Nardina Rodrigues Johansen, 405 – TR01 AP608, CEP: 87005002, Maringa - PR</span>
             <div class="container">
                 <div class="card">
-                    <div class="icon">💰</div>
+                    <div class="icon"><i class="fa-solid fa-piggy-bank"></i></div>
                     <div>No total você gastou:</div>
                     <div class="value">R$ 720,53</div>
                 </div>
                 <div class="card">
-                    <div class="icon">💸</div>
+                    <div class="icon"><i class="fa-solid fa-money-bill"></i></div>
                     <div>Média de gastos</div>
                     <div class="value">R$ 120,09</div>
                 </div>
                 <div class="card">
-                    <div class="icon">⚡</div>
+                    <div class="icon"><i class="fa-solid fa-bolt"></i></div>
                     <div>Energia limpa consumida</div>
                     <div class="value">162 kWh</div>
                 </div>
                 <div class="card">
-                    <div class="icon">☁️</div>
+                    <div class="icon"><i class="fa-solid fa-cloud"></i></div>
                     <div>Total de CO2 não emitidos</div>
                     <div class="value">27.95 kg</div>
                 </div>
