--- a/help.html
+++ b/help.html
@@ -216,7 +216,7 @@
         }
 
         .check-icon {
-            color: blue;
+            color: #018538;
             margin-right: 10px;
             margin-top: 5px;
             flex-shrink: 0;
@@ -241,7 +241,7 @@
         }   
         .numero {
             font-weight: bold;
-            color: blue;
+            color: #018538;
             margin-right: 10px;
         }
 
@@ -343,7 +343,7 @@
         }
         .icon {
             font-size: 24px;
-            color: blue;
+            color: #018538;
             margin-right: 10px;
         }
 
@@ -355,7 +355,7 @@
 
         .valor {
             font-size: 1.5em;
-            color: blue;
+            color: #018538;
             font-weight: bold;
         }
 
@@ -510,7 +510,7 @@
             margin-right: 8px;
         }
         .discount {
-            background-color: blue;
+            background-color: #018538;
             color: white;
             padding: 4px 8px;
             border-radius: 4px;
@@ -521,7 +521,7 @@
             color: red;
         }
         .preco {
-            color: blue;
+            color: #018538;
             font-size: 24px; /* Ajuste o tamanho conforme necessário */
         }
         .box-container {
@@ -552,7 +552,7 @@
             border-radius: 2px;
         }
         .blue-underline {
-            background-color: blue;
+            background-color: #018538;
         }
         .orange-underline {
             background-color: orange;
@@ -597,7 +597,7 @@
         .icon {
             font-size: 20px; /* Ajuste conforme necessário */
             margin-right: 10px; /* Espaçamento entre o ícone e o texto */
-            color: blue; /* Ajuste a cor conforme necessário */
+            color: #018538; /* Ajuste a cor conforme necessário */
         }
         
         .text {
