--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             background-color: #fff;
             border-radius: 5px;
             padding: 20px;
-            margin-bottom: 10px;
+            margin-bottom: 40px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
         .chart {
@@ -263,7 +263,7 @@
         }
 
         .check-icon {
-            color: blue;
+            color: #018538;
             margin-right: 10px;
             margin-top: 5px;
             flex-shrink: 0;
@@ -285,13 +285,12 @@
             display: flex;
             align-items: center;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            font-family: Arial, sans-serif;
             margin-top: 30px;
         }
 
         .numero {
             font-weight: bold;
-            color: blue;
+            color: #018538;
             margin-right: 10px;
         }
 
@@ -336,8 +335,8 @@
             padding-left: 10px;
         }
         .alert-container {
-            border: 1px solid #cce5ff;
-            background-color: #e9f4ff;
+            border: 1px solid #ff4949;
+            background-color: #ffd7d7;
             padding: 10px 15px;
             border-radius: 8px;
             cursor: pointer;
@@ -345,16 +344,16 @@
             display: flex;
             align-items: center;
             margin: 20px;
-            font-family: Arial, sans-serif;
+
         }
 
         .alert-container i {
-            color: #007bff;
+            color: #ff0000;
             margin-right: 10px;
         }
 
         .alert-container strong {
-            color: #007bff;
+            color: #000000;
             margin-right: 5px;
         }
 
@@ -403,7 +402,7 @@
 
         .icon {
             font-size: 24px;
-            color: blue;
+            color: #018538;
             margin-right: 10px;
         }
 
@@ -415,7 +414,7 @@
 
         .valor {
             font-size: 1.5em;
-            color: blue;
+            color: #018538;
             font-weight: bold;
         }
 
@@ -433,24 +432,31 @@
             align-items: center;
             cursor: pointer;
             transition: background-color 0.3s;
+
         }
         .card:hover {
-            background-color: #b3e6b3; /* Verde suave no hover */
+            background-color: #9fe29f; /* Verde suave no hover */
         }
         .card-content {
             display: none;
             padding: 10px;
-            background-color: #d9f2d9; /* Verde suave */
+            background-color: #efffef; /* Verde suave */
             border-radius: 8px;
             margin-top: 10px;
+            margin-bottom: 50px;
             text-align: right;
+            margin-top: 0px;
         }
         .card-header {
             display: flex;
             align-items: center;
-            background-color: #ccf2cc; /* Verde suave */
+            background-color: #e0ffe0; /* Verde suave */
             padding: 10px;
             border-radius: 5px;
+            transition: background-color 0.3s ease; /* Transição suave */
+        }
+        .card:hover .card-header {
+            background-color: #9fe29f; /* Mesma cor do card no hover */
         }
 
         .status {
@@ -475,7 +481,7 @@
             text-align: center;
             cursor: pointer;
             padding: 10px;
-            background-color: #e0ffe0; /* Verde pastel suave */
+            background-color: #ccffcc; /* Verde pastel suave */
             border-radius: 10px;
             margin-top: 20px;
             transition: background-color 0.3s;
@@ -485,12 +491,76 @@
             background-color: #ccffcc; /* Verde mais intenso no hover */
         }
         .card-container {
-            background-color: #e6ffe6; /* Verde claro */
+            background-color: #e0ffe0; /* Verde claro */
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             margin-top: 16px;
+            gap: 30px;
+            border: 1px solid #56dd66;
         }
+        @media (max-width: 768px) {
+        .sidebar {
+            width: 60px; /* Manterá a largura mínima em dispositivos móveis */
+            position: relative;
+        }
+
+        .content {
+            margin-left: 0; /* Removerá a margem para ocupar toda a largura disponível */
+            padding: 10px; /* Ajusta o padding para dispositivos menores */
+        }
+
+        .topbar {
+            width: 100%; /* Ocupa toda a largura disponível */
+            margin-left: 0; /* Elimina a margem lateral */
+        }
+
+        .card {
+            flex-direction: column; /* Ajusta o layout dos cards para colunas */
+            align-items: flex-start; /* Alinha o conteúdo à esquerda */
+        }
+
+        .sidebar:hover {
+            width: 150px; /* Ajusta a largura ao passar o mouse em dispositivos móveis */
+        }
+
+        .sidebar a .text {
+            display: none !important; /* Garante que o texto permaneça oculto em dispositivos menores */
+        }
+
+        .topcontent {
+            flex-direction: column; /* Ajusta a direção do conteúdo para colunas */
+            align-items: flex-start; /* Alinha o conteúdo à esquerda */
+        }
+        
+        /* Ajustes para o conteúdo do card */
+        .card-content {
+            padding: 10px;
+        }
+        
+        .more-cards {
+            width: 100%; /* Ocupa toda a largura disponível */
+        }
+    }
+
+    @media (max-width: 480px) {
+        .sidebar {
+            width: 50px; /* Ajusta uma largura ainda menor para telas bem pequenas */
+        }
+
+        .content {
+            padding: 5px; /* Reduz ainda mais o padding para telas pequenas */
+        }
+
+        .card {
+            padding: 10px; /* Ajusta o padding dos cards */
+        }
+
+        .topbar {
+            padding: 5px; /* Ajusta o padding da barra superior */
+            font-size: 12px; /* Reduz o tamanho da fonte para caber melhor */
+        }
+    }
 
     </style>
 </head>
