--- a/calendar.html
+++ b/calendar.html
@@ -670,7 +670,7 @@
         </a>
 
         <a href="reports.html">
-            <i class="fa-solid fa-solar-panel"></i><span class="text">Relatórios</span>
+            <i class="fa-solid fa-solar-panel"></i><span class="text">Gráficos</span>
         </a>
         <a href="calendar.html">
             <i class="fa-solid fa-gauge"></i> <span class="text">Gráficos</span>
@@ -681,7 +681,7 @@
     </div>
     <div class="content">
         <div class="content1">
-            <h2>Relatórios</h2>
+            <h2>Gráficos</h2>
             <div class="topcontent">
                 <div class="topcontent1">
                     <div><i class="fa-solid fa-filter"></i> Filtro de pesquisa</div>
