--- a/help.html
+++ b/help.html
@@ -719,7 +719,7 @@
         </a>
 
         <a href="reports.html">
-            <i class="fa-solid fa-solar-panel"></i><span class="text">Relatórios</span>
+            <i class="fa-solid fa-solar-panel"></i><span class="text">Perfil</span>
         </a>
         <a href="calendar.html">
             <i class="fa-solid fa-gauge"></i> <span class="text">Gráficos</span>
@@ -730,7 +730,7 @@
     </div>
     <div class="content">
         <div class="content1">
-            <h2>Relatórios</h2>
+            <h2>Perfil</h2>
             <div class="topcontent">
                 <div class="topcontent1">
                     <div><i class="fa-solid fa-filter"></i> Filtro de pesquisa</div>
