Retirada de bugs em css

--- a/calendar.html
+++ b/calendar.html
@@ -17,7 +17,7 @@
             overflow-x: hidden; /* Prevenir overflow horizontal */
         }
         a,p {
-            font-family: Epilogue !important;
+            font-family: Epilogue !important; 
         }
         .sidebar {
             width: 60px;
@@ -114,7 +114,7 @@
             width: 100px; /* Reduz ainda mais a largura */
             margin-bottom: 5px; /* Menor espaço inferior */
             margin-right: 5px; /* Menor espaço entre os cards */
-            font-size: 10px; /* Reduz o tamanho da fonte */
+            font-size: 10px;
         }
 
         .logo {
@@ -234,7 +234,7 @@
             display: flex;
             align-items: center;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            font-family: Arial, sans-serif;
+            /* font-family: Arial, sans-serif; */
             margin-top: 30px;
         }   
         .numero {
@@ -287,7 +287,7 @@
             display: flex;
             align-items: center;
             margin: 20px;
-            font-family: Arial, sans-serif;
+            /* font-family: Arial, sans-serif; */
         }
 
         .alert-container i {
@@ -335,7 +335,7 @@
         }
         .economia-container {
             display: block;
-            font-family: 'Inter', sans-serif;
+            /* font-family: 'Inter', sans-serif; */
             color: #333;
             text-align: right;
         }
@@ -496,12 +496,6 @@
             cursor: pointer;
             font-size: 18px;
         }
-        .container {
-            padding-top: 10px;
-            display: flex;
-            align-items: center;
-            font-family: Arial, sans-serif;
-        }
         .date {
             font-weight: bold;
             margin-right: 8px;
@@ -519,7 +513,7 @@
         }
         .preco {
             color: #018538;
-            font-size: 24px; /* Ajuste o tamanho conforme necessário */
+            font-size: 24px; 
         }
         .box-container {
             display: flex;
@@ -593,7 +587,7 @@
         }
         
         .text {
-            font-size: 14px;
+
             color: #657a7a;
         }
         .value {
@@ -670,7 +664,7 @@
         </a>
 
         <a href="reports.html">
-            <i class="fa-solid fa-solar-panel"></i><span class="text">Gráficos</span>
+            <i class="fa-solid fa-solar-panel"></i><span class="text">Relatórios</span>
         </a>
         <a href="calendar.html">
             <i class="fa-solid fa-gauge"></i> <span class="text">Gráficos</span>
