--- a/help.html
+++ b/help.html
@@ -601,7 +601,7 @@
         }
         
         .text {
-            font-size: 14px;
+
             color: #657a7a;
         }
         .value {
@@ -719,7 +719,7 @@
         </a>
 
         <a href="reports.html">
-            <i class="fa-solid fa-solar-panel"></i><span class="text">Perfil</span>
+            <i class="fa-solid fa-solar-panel"></i><span class="text">Relatórios</span>
         </a>
         <a href="calendar.html">
             <i class="fa-solid fa-gauge"></i> <span class="text">Gráficos</span>
