--- a/reports.html
+++ b/reports.html
@@ -49,8 +49,7 @@
             gap: 10px;
             margin-left: 8px;
             margin-top: 24px;
-            font-family: 'Epilogue', sans-serif !important;
-            font-size: 14px !important; /* Define o tamanho da fonte */
+
         }
         .sidebar a:hover {
             background-color: #ddd;
@@ -58,14 +57,12 @@
         .sidebar a .text {
             display: none;
             margin-left: 10px;
-            font-family: 'Epilogue', sans-serif !important;
-            font-size: 14px !important; /* Define o tamanho da fonte */
+
         }
         .sidebar:hover a .text {
             display: inline-block;
             color: #000;
-            font-family: 'Epilogue', sans-serif !important;
-            font-size: 14px !important; /* Define o tamanho da fonte */
+
         }
         .sidebar:hover .span {
             text-decoration: none;
@@ -166,7 +163,7 @@
             padding: 15px 0px;
             text-decoration: none;
             text-align: center;
-            font-weight: bold; /* Negrito */
+
             font-size: 13px;
             margin-right: 40px;
             
@@ -616,10 +613,11 @@
             font-size: 24px;
             margin-right: 8px;
         }
-        .text {
+        .textx {
             color: blue;
             font-weight: bold;
             margin-right: 4px;
+            font-size: 16px;
         }
         .value {
             color: gray;
@@ -631,8 +629,8 @@
             background-color: #e0e7e7;
             padding: 20px;
             border-radius: 50%;
-            width: 120px;
-            height: 120px;
+            width: 140px;
+            height: 140px;
             justify-content: center;
             flex-direction: column;
             margin-right: 7%;
@@ -642,10 +640,7 @@
             color: #657a7a;
             margin-bottom: 10px;
         }
-        .text {
-            font-size: 14px;
-            color: #657a7a;
-        }
+
         .value {
             font-weight: bold;
             color: black;
@@ -817,24 +812,24 @@
             </div>
             <div class="container">
                 <span class="icon">⚡</span>
-                <span class="text">Energia consumida</span>
+                <span class="textx">Energia consumida</span>
                 <span class="value">0 kWh</span>
             </div>
             <div class="menuinferior">
             <div class="item">
                 <div class="icon">⚡</div>
                 <div class="value">0 kg</div>
-                <div class="text">de CO2 que são deixados de emitir na atmosfera</div>
+                <div class="textx">de CO2 que são deixados de emitir na atmosfera</div>
             </div>
             <div class="item">
                 <div class="icon">♻️</div>
                 <div class="value">0 kWh</div>
-                <div class="text">total de energia limpa consumida durante o mês</div>
+                <div class="textx">total de energia limpa consumida durante o mês</div>
             </div>
             <div class="item">
                 <div class="icon">🌱</div>
                 <div class="value">0 árvores</div>
-                <div class="text">compensadas neste mês consumindo energia limpa</div>
+                <div class="textx">compensadas neste mês consumindo energia limpa</div>
             </div>
         </div>
         </div>
